--- a/WorkablePlugin/README
+++ b/WorkablePlugin/README
@@ -1,2 +1,2 @@
 *Workableの候補者データをexmentに取り込むプラグインです*
-データの取り込みフォーマットはtemplateディレクトリにあるxlsxファイルの形式になっているので、取り込んでください。
+データの取り込みフォーマットはtemplateディレクトリにあるxlsxファイルの形式になっているので、適宜取り込んでください。
